# weather-scraping

./: .cache.sqlite  .gitignore  Dockerfile  README.md  extract.py  launch.py  open-meteo-1.csv  open-meteo-50.65N7.18E77mBadHonnef.csv  open-meteo-51.49N0.16W23mlondon.csv  open-meteo-52.55N13.41E38m.csv  open-meteo-9.03N7.47E480mabuja.csv  pyproject.toml  requirements.txt  run.sh  schedule.py  viz.py  weather.hdf5  weather2.hdf5  websites.csv
