[project]
name = "webscraping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "fastexcel>=0.12.0",
    "flask>=3.1.0",
    "h5py>=3.12.1",
    "lxml>=5.3.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "openmeteo-requests>=1.3.0",
    "openpyxl>=3.1.5",
    "polars>=1.19.0",
    "pyarrow>=18.1.0",
    "requests-cache>=1.2.1",
    "requests>=2.32.3",
    "tables>=3.10.2",
    "wunderweather>=1.1.0",
    "yfinance>=0.2.51",
    "retry-requests>=2.0.0",
]
