[project]
name = "webscraping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.8.0",
    "attrs>=25.1.0",
    "beautifulsoup4>=4.12.3",
    "blinker>=1.9.0",
    "blosc2>=3.0.0",
    "cattrs>=24.1.2",
    "certifi>=2024.12.14",
    "charset-normalizer>=3.4.1",
    "click>=8.1.8",
    "colorama>=0.4.6",
    "contourpy>=1.3.1",
    "cycler>=0.12.1",
    "easydict>=1.13",
    "et-xmlfile>=2.0.0",
    "flask>=3.1.0",
    "flatbuffers>=24.3.25",
    "fonttools>=4.55.6",
    "frozendict>=2.4.6",
    "h11>=0.14.0",
    "h5py>=3.12.1",
    "html5lib>=1.1",
    "httpcore>=1.0.7",
    "httpx>=0.28.1",
    "idna>=3.10",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.5",
    "kiwisolver>=1.4.8",
    "lxml>=5.3.0",
    "markupsafe>=3.0.2",
    "matplotlib>=3.10.0",
    "msgpack>=1.1.0",
    "multitasking>=0.0.11",
    "ndindex>=1.9.2",
    "numexpr>=2.10.2",
    "numpy>=2.2.2",
    "openmeteo-requests>=1.3.0",
    "openmeteo-sdk>=1.18.6",
    "openpyxl>=3.1.5",
    "packaging>=24.2",
    "pandas>=2.2.3",
    "peewee>=3.17.8",
    "pillow>=11.1.0",
    "platformdirs>=4.3.6",
    "py-cpuinfo>=9.0.0",
    "pyparsing>=3.2.1",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2024.2",
    "requests>=2.32.3",
    "requests-cache>=1.2.1",
    "retry-requests>=2.0.0",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "soupsieve>=2.6",
    "tables>=3.10.2",
    "typing-extensions>=4.12.2",
    "tzdata>=2025.1",
    "url-normalize>=1.4.3",
    "urllib3>=2.3.0",
    "webencodings>=0.5.1",
    "werkzeug>=3.1.3",
]
